--- a/requirements_docs.txt
+++ b/requirements_docs.txt
@@ -26,6 +26,6 @@ nbconvert==6.0.7
 nbformat==5.1.3
 nbsphinx==0.8.5
 nbsphinx-link==1.3.0
-notebook==6.3.0
+notebook>=6.4.1
 rstcheck==3.3.1
 widgetsnbextension==3.5.1
